# lroton

./: .gitignore  README.md  meson.build
data/: com.github.rajsolai.lroton.appdata.xml.in  com.github.rajsolai.lroton.desktop.in  com.github.rajsolai.lroton.gresource.xml  meson.build  stylesheet.css
debian/: changelog  com.github.rajsolai.lroton.substvars  control  files
debian/.debhelper/com.github.rajsolai.lroton/: dbgsym-build-ids
debian/.debhelper/com.github.rajsolai.lroton/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/com.github.rajsolai.lroton/dbgsym-root/usr/share/doc/: com.github.rajsolai.lroton-dbgsym
debian/com.github.rajsolai.lroton/DEBIAN/: control  md5sums  postinst
debian/com.github.rajsolai.lroton/usr/share/applications/: com.github.rajsolai.lroton.desktop
debian/com.github.rajsolai.lroton/usr/share/doc/com.github.rajsolai.lroton/: copyright
debian/com.github.rajsolai.lroton/usr/share/metainfo/: com.github.rajsolai.lroton.appdata.xml
docs/: index.html
meson/: post_install.py
po/extra/: POTFILES
res/: com.github.rajsolai.lroton_0.1ubuntu1_amd64.deb  lroton0.1.deb
src/: Application.vala  Settings.vala  meson.build
src/Dialogs/: About.vala  Error.vala  Settings.vala
src/Services/: configuration.vala  protonvpn.vala
src/Widgets/: applicationheader.vala  configbox.vala  connectedbox.vala  welcome.vala
tests/: refresh-protonvpn  refresh-protonvpn.vala
