# Listing files to compile
sources = files (
    'Application.vala',

    'Dialogs/About.vala',
    'Dialogs/Error.vala',

    'Services/configuration.vala',
    'Services/protonvpn.vala',
    
    'Widgets/welcome.vala',
    'Widgets/connectedbox.vala',
    'Widgets/configbox.vala',
    'Widgets/applicationheader.vala'
)
